Update image and video paths to match astro-image folder

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <!-- Video Background -->
+    <!------------------ Video Background -------------------->
     <div class="video-background">
         <video autoplay muted loop>
-            <source src="bkgrnd.mp4.mp4" type="video/mp4">
+            <source src="astro-image/bkgrnd.mp4.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
 
-    <!-- Header -->
+    <!-------------------------------- Header ---------------------->
     <header class="header">
         <div class="container">
             <a href="#" class="nav-logo">
-                <img src="planet22.png" alt="AstroNova Logo" class="nav-logo-img">
+                <img src="astro-image/planet22.png" alt="AstroNova Logo" class="nav-logo-img">
                 AstroNova
             </a>
             <div class="menu" id="nav-menu">
@@ -37,7 +37,7 @@
         </div>
     </header>
 
-    <!-- Main Content -->
+    <!------------------------- Main Content ------------------------------->
     <main class="main">
         <!-- Home Section -->
         <section class="home section" id="home">
@@ -53,17 +53,17 @@
                     </p>
                     <a href="#join-us" class="button">Join Us</a>
                 </div>
-                <img src="moon.png" alt="Moon" class="moon">
+                <img src="astro-image/moon.png" alt="Moon" class="moon">
             </div>
         </section>
 
-        <!-- News & Articles Section -->
+        <!---------------------------------- News & Articles Section ----------------------->
         <section class="news-stricles section" id="news">
             <h2 class="section__title">Your Window to Space</h2>
             <h3 class="section__subtitle">Astronomy News & Articles</h3>
             <div class="news-container container">
                 <div class="news-card">
-                    <img src="discovery.jpg" alt="Discovery" class="news-img">
+                    <img src="astro-image/discovery.jpg" alt="Discovery" class="news-img">
                     <h3 class="tittle-of-article">Accidental Astronomical Discoveries</h3>
                     <p class="the-news">
                         Discover how amateur astronomers and enthusiasts have made 
@@ -72,7 +72,7 @@
                     <a href="#" class="more-information" data-modal="modal1">Read More</a>
                 </div>
                 <div class="news-card">
-                    <img src="blackhole.jpg" alt="Black Hole" class="news-img">
+                    <img src="astro-image/blackhole.jpg" alt="Black Hole" class="news-img">
                     <h3 class="tittle-of-article">Unveiling the Mysteries of Black Holes</h3>
                     <p class="the-news">
                         Explore the latest findings about black holes and their role 
@@ -119,7 +119,7 @@
             </div>
         </section>
 
-        <!-- Events Section -->
+        <!---------------------------- Events Section -------------------->
         <section class="events section" id="events">
             <h2 class="section__title">Cosmic Countdown</h2>
             <h3 class="section__subtitle">The Universe Has a Show for You!</h3>
@@ -131,7 +131,7 @@
             <div class="event-sweper container">
                 <div class="swiper-wrapper">
                     <div class="event-card swiper-slide">
-                        <img src="qua.png" alt="Quadrantids" class="event-img">
+                        <img src="astro-image/qua.png" alt="Quadrantids" class="event-img">
                         <div class="event-details">
                             <h3>🌠 Quadrantids Meteor Shower</h3>
                             <p>Date: January 3-4, 2025</p>
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                     <div class="event-card swiper-slide">
-                        <img src="SM.png" alt="Supermoon" class="event-img">
+                        <img src="astro-image/SM.png" alt="Supermoon" class="event-img">
                         <div class="event-details">
                             <h3>🌕 Supermoon</h3>
                             <p>Date: March 10, 2025</p>
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                     <div class="event-card swiper-slide">
-                        <img src="elc.png" alt="Solar Eclipse" class="event-img">
+                        <img src="astro-image/elc.png" alt="Solar Eclipse" class="event-img">
                         <div class="event-details">
                             <h3>🌑 Total Solar Eclipse</h3>
                             <p>Date: April 8, 2024</p>
@@ -155,7 +155,7 @@
                         </div>
                     </div>
                     <div class="event-card swiper-slide">
-                        <img src="jusa.png" alt="Conjunction" class="event-img">
+                        <img src="astro-image/jusa.png" alt="Conjunction" class="event-img">
                         <div class="event-details">
                             <h3>🪐 Jupiter & Saturn Conjunction</h3>
                             <p>Date: June 15, 2025</p>
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                     <div class="event-card swiper-slide">
-                        <img src="HarvestMoon-removebg-preview.png" alt="Harvest Moon" class="event-img">
+                        <img src="astro-image/HarvestMoon-removebg-preview.png" alt="Harvest Moon" class="event-img">
                         <div class="event-details">
                             <h3>🌕 Harvest Moon</h3>
                             <p>Date: September 18, 2025</p>
@@ -177,7 +177,7 @@
             </div>
         </section>
 
-        <!-- Join Us Section -->
+        <!------------------------------- Join Us Section ----------------->
         <section class="join-us section" id="join-us">
             <div class="join container">
                 <h2 class="section__title">Embark on Your Astronomical Journey</h2>
@@ -209,17 +209,17 @@
         </section>
     </main>
 
-    <!-- Footer -->
+    <!--------------------------- Footer ----------------------->
     <footer class="foot">
         <p>✨ By Aya Abu Taha ✨</p>
     </footer>
 
-    <!-- Scroll Up -->
+    <!------------------------- Scroll Up ----------------------->
     <a href="#" class="scrollup" id="scroll-up">
         <i class="fas fa-arrow-up"></i>
     </a>
 
-    <!-- Modals for Articles -->
+    <!----------------------------- Modals for Articles ----------------->
     <div class="modal" id="modal1">
         <div class="modal-content">
             <span class="modal-close">&times;</span>
@@ -257,7 +257,7 @@
         </div>
     </div>
 
-    <!-- Registration Modal -->
+    <!-------------------------------- Registration Modal ------------------------>
     <div class="modal" id="register-modal">
         <div class="modal-content">
             <span class="modal-close">&times;</span>
